# Invoicy

./: .gitignore  Cargo.toml  README.md  csv_test.rs  invoicy.db
.github/workflows/: build.yml
src/: csv_test.rs  document.rs  functions.rs  main.rs  structs.rs
src/components/: bottom_bar.rs  central_panel.rs  menu.rs  mod.rs  top_bar.rs
src/csv/: customer.csv  items.csv  personal.csv
