[package]
name = "invoicy"
version = "0.3.0"
edition = "2018"
description = "an invoicing software"

[package.metadata.bundle]
name = "Invoicy"
identifier = "com.teomayo.invoicy"
icon = [
    "images/icons/32x32.png",
    "images/icons/128x128.png",
    "images/icons/128x128@2x.png",
]
resources = ["images/*", "fonts/*"]
version = "0.3.0"
copyright = "Copyright (c) Teodor Crnobrnja 2024. All rights reserved."
osx_frameworks = ["SDL2", "Adlm", "CoreRepairCore", "CoreRepairKit", "R"]
osx_url_schemes = ["com.teomayo.invoicy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
egui_extras = "0.28.1"
genpdf = { version = "0.2.0", features = ["images"] }
whoami = "1.5.1"
image = "0.25.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
csv = "1.3.0"
chrono = "0.4.38"
rfd = "0.14.1"
embed-resource = "1.6"
