[package]
name = "invoicy"
version = "1.0.0"
edition = "2018"
description = "an invoicing software"

[package.metadata.bundle]
name = "Invoicy"
identifier = "com.teomayo.invoicy"
icon = [
    "support/images/32x32.png",
    "support/images/128x128.png",
    "support/images/128x128@2x.png",
]
resources = ["support/images/*", "fonts/*"]
version = "1.0.0"
copyright = "Copyright (c) Teodor Crnobrnja 2024. All rights reserved."
osx_frameworks = ["SDL2", "Adlm", "CoreRepairCore", "CoreRepairKit", "R"]
osx_url_schemes = ["com.teomayo.invoicy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
egui_extras = "0.28.1"
genpdf = { version = "0.2.0", features = ["images"] }
image = "0.25.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4.38"
rfd = "0.14.1"
open = "3.0"
egui_logger = "0.5.0"
